Add gamma dependency to package.json

--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
   "bugs": {
     "url": "https://github.com/compute-io/factorialln/issues"
   },
-  "dependencies": {  "compute-array-constructors": "^1.0.0",
+  "dependencies": {
+    "compute-array-constructors": "^1.0.0",
     "dstructs-matrix": "^2.0.0",
+    "gamma": "^1.0.0",
     "utils-deep-get": "^1.0.0",
     "utils-deep-set": "^1.0.1",
     "validate.io-array-like": "^1.0.1",
